ARM64: configs: vin8953: Disable EFI, UFS, MITIGATE_SPECTRE_BRANCH_HISTORY
* Fixes compilation

Change-Id: I5372c7752e2c84fde4ccdd981e80b328315aa865

--- a/arch/arm64/configs/vin8953_defconfig
+++ b/arch/arm64/configs/vin8953_defconfig
@@ -515,7 +515,7 @@ CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_PSCI_BP_HARDENING=y
 CONFIG_ARM64_SSBD=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -545,7 +545,7 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 CONFIG_CMDLINE=""
 CONFIG_EFI_STUB=y
-CONFIG_EFI=y
+# CONFIG_EFI is not set
 CONFIG_DMI=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
@@ -1398,10 +1398,6 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_ISCSI_TCP is not set
 # CONFIG_ISCSI_BOOT_SYSFS is not set
 # CONFIG_SCSI_HISI_SAS is not set
-CONFIG_SCSI_UFSHCD=y
-CONFIG_SCSI_UFSHCD_PLATFORM=y
-CONFIG_SCSI_UFS_QCOM=y
-CONFIG_SCSI_UFS_QCOM_ICE=y
 # CONFIG_SCSI_UFSHCD_CMD_LOGGING is not set
 # CONFIG_SCSI_DEBUG is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
