--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -11,7 +11,6 @@ menuconfig INPUT_TOUCHSCREEN
 
 if INPUT_TOUCHSCREEN
 
-source "drivers/input/touchscreen/synaptics_dsx_2.6/Kconfig"
 
 config TOUCHSCREEN_PROPERTIES
 	def_tristate INPUT
@@ -1373,21 +1372,6 @@ config TOUCHSCREEN_SYNAPTICS_DSX
 
           If unsure, say N.
 
-source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
-source "drivers/input/touchscreen/focaltech_touch/Kconfig"
-
-config TOUCHSCREEN_FT5X06
-       tristate "FocalTech touchscreens"
-       depends on I2C
-       help
-         Say Y here if you have a ft5X06 touchscreen.
-	 Ft5x06 controllers are multi touch controllers which can
-	 report 5 touches at a time.
-
-         If unsure, say N.
-
-         To compile this driver as a module, choose M here: the
-         module will be called ft5x06_ts.
 
 config TOUCHSCREEN_GEN_VKEYS
 	tristate "Touchscreen Virtual Keys Driver"
@@ -1421,6 +1405,23 @@ config TOUCHSCREEN_GT9XX_v28
           If unsure, say N.
 
 source "drivers/input/touchscreen/gt9xx_v2.8/Kconfig"
+
+config TOUCHSCREEN_CHIPONE_V420A
+	bool "Chipone for qcom touchpanel package"
+	default I2C
+	help
+	  Say Y here if you have a Chipone icnl9911 touchscreen.
+	  If unsure, say N.
+
+	  To compile this dirver as a module, choose M here: the
+	  module will be called.
+source "drivers/input/touchscreen/chipone-tddi/Kconfig"
+
+config CHIPONE_FINGERPRINT
+        tristate "Chipone Finger Print Driver"
+        help
+          Chipone Finger Print Supported
+source "drivers/input/touchscreen/fpsensor/Kconfig"
 
 config TOUCHSCREEN_HIMAX_CHIPSET
 	bool "Himax touchpanel CHIPSET"
