--- a/arch/arm64/configs/vin8953_defconfig
+++ b/arch/arm64/configs/vin8953_defconfig
@@ -1798,7 +1798,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
 # CONFIG_TOUCHSCREEN_GT9XX_v28 is not set
 CONFIG_TOUCHSCREEN_CHIPONE_V420A=y
-# CONFIG_CHIPONE_FINGERPRINT is not set
+CONFIG_CHIPONE_FINGERPRINT=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_EKTF3XXX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
