--- a/arch/arm64/configs/april_defconfig
+++ b/arch/arm64/configs/april_defconfig
@@ -2835,7 +2835,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_FB_MSM=y
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_FB_AUO_K190X is not set
-# CONFIG_FB_SIMPLE is not set
+CONFIG_FB_SIMPLE=y
 # CONFIG_MSM_DBA is not set
 CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP is not set
